fix: middle align issue markers

--- a/assets/css/bpmn-js-bpmnlint.css
+++ b/assets/css/bpmn-js-bpmnlint.css
@@ -28,11 +28,11 @@
 .bjsl-icon {
   background: white;
   border-radius: 100%;
-  display: inline-block;
   height: 20px;
-  line-height: 23px;
-  text-align: center;
   width: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .bjsl-icon-error {
